2008-05-24  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TileCache.cpp
    * src/lib/TileLoader.cpp
    * src/lib/TileCache.h
    * src/lib/CMakeLists.txt

    Remove class TileCache since it was only a wrapper around QCache.

2008-05-24  Inge Wallin  <inge@lysator.liu.se>

	Move globeCoversImage to the projection classes and call it
	mapCoversViewport.
	* src/lib/Projections/AbstractProjection.h,
	* src/lib/Projections/SphericalProjection.{h,cpp},
	* src/lib/Projections/EquirectProjection.{h,cpp},
	* src/lib/Projections/MercatorProjection.{h,cpp}:
	(mapCoversViewport): New function.
	* src/lib/ViewportParams.{h,cpp} (mapCoversViewport): new function
	* src/lib/MarbleMap.{h,cpp} (globeCoversImage): 
	   - Renamed into mapCoversViewport
	   - Call viewport->mapCoversViewport()
	* src/lib/MarbleWidget.cpp: Call m_map->mapCoversViewport().
	
2008-05-24  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/gps/Track.h:
    * src/lib/AbstractLayer/AbstractLayerInterface.h:

    Fix includes.

2008-05-24  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/gps/TrackPoint.h:
    * src/lib/AbstractLayer/AbstractLayerData.h:
    * src/lib/AbstractLayer/AbstractLayerContainer.h:

    Declare constructors explicit.

2008-05-24  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/AbstractScanlineTextureMapper.h

    Small optimisation.
    Replace constant trigonometric expressions with the actual values.

2008-05-24  Torsten Rahn  <rahn@kde.org> 

    * src/lib/EquirectScanlineTextureMapper.cpp:

    - Add bilinear filtering here as well as pointed out by jm

2008-05-24  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/ViewParams.h:
    * src/lib/ViewportParams.h:

    Fix d-pointerfied classes by disallowing copies.
    Thanks to Pino Toscano for pointing this out.

2008-05-24  Torsten Rahn  <rahn@kde.org> 

    * data/maps/earth/openstreetmap/0/0/0.png:

    - Given that the previous OSM tile shipped with Marble was