@@ -24,19 +24,19 @@ add_subdirectory( plugins )
 
 if (NOT QTONLY)
   include(MacroOptionalDependPackage)
-  MACRO_OPTIONAL_DEPEND_PACKAGE(Koffice "koffice")
-  if(DEPEND_PACKAGE_Koffice)
-          macro_optional_find_package(Koffice QUIET)
-  else(DEPEND_PACKAGE_Koffice)
-          set(KOFFICE_FOUND FALSE)
-  endif(DEPEND_PACKAGE_Koffice)
+  MACRO_OPTIONAL_DEPEND_PACKAGE(KOfficeLibs "koffice")
+  if(DEPEND_PACKAGE_KOfficeLibs)
+          macro_optional_find_package(KOfficeLibs QUIET)
+  else(DEPEND_PACKAGE_KOfficeLibs)
+          set(KOFFICELIBS_FOUND FALSE)
+  endif(DEPEND_PACKAGE_KOfficeLibs)
    
-  # Laurent: Reactivate it when export header from koffice will fixed 
-  if(KOFFICE_FOUND)
+  # Laurent: Reactivate it when export header from koffice will fixed   
+  if(KOFFICELIBS_FOUND)
      add_subdirectory( geoshape )
-  else(KOFFICE_FOUND)
+  else(KOFFICELIBS_FOUND)
      MESSAGE(STATUS "We must install koffice before to compile geoshape plugins")
-  endif(KOFFICE_FOUND)
+  endif(KOFFICELIBS_FOUND)
 endif(NOT QTONLY)
 
 if(APPLE)
