@@ -1,4 +1,3 @@
-IF(BUILD_WITH_GEOSHAPE)
 include_directories( ${KOFFICE_INCLUDE_DIR}
                      ${CMAKE_SOURCE_DIR}
                      ${CMAKE_BINARY_DIR}
@@ -17,7 +16,7 @@ SET (geoshape_LIB_SRCS
 #linker error with "undefined reference to `ViewParams::viewport()'"
 kde4_add_plugin(geoshape ${geoshape_LIB_SRCS})
 
-target_link_libraries(geoshape marblewidget ${KOFFICE_LIBRARIES} kstore flake koguiutils koodf komain)
+target_link_libraries(geoshape marblewidget ${KSTORE_LIBRARY} ${FLAKE_LIBRARY} ${KOGUIUTILS_LIBRARY} ${KOTEXT_LIBRARY} ${KOMAIN_LIBRARY})
 install(TARGETS geoshape DESTINATION ${PLUGIN_INSTALL_DIR})
 
 ########### install files ###############
@@ -25,4 +24,3 @@ install(TARGETS geoshape DESTINATION ${PLUGIN_INSTALL_DIR})
 install( FILES geoshape.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 
 ##kde4_install_icons( ${DATA_INSTALL_DIR}/koffice/icons )
-ENDIF(BUILD_WITH_GEOSHAPE)
